--- a/configs/nginx/nyaago_log.conf
+++ b/configs/nginx/nyaago_log.conf
@@ -1,10 +1,12 @@
 log_format nyaago escape=json '{'
-	'"timestamp":$msec,'
-	'"remote_addr":"$remote_addr",'
-	'"request_method":"$request_method",'
-	'"request_uri":"$request_uri",'
-	'"status":"$status",'
-	'"request_time":$request_time,'
-	'"body_bytes_sent":$body_bytes_sent,'
-	'"http_x_forwarded_for":"$http_x_forwarded_for"'
+    '"time":"$msec",'
+    '"client":"$remote_addr",'
+    '"server":"$server_addr",'
+    '"method":"$request_method",'
+    '"url":"$request_uri",'
+    '"status":$status,'
+    '"sent":$body_bytes_sent,'
+    '"duration":"$request_time",'
+    '"host":"$host",'
+    '"agent":"$http_user_agent"'
 '}';
