feat(rulelist): rename iplist to rulelist, refactor implementation with badger db

--- a/configs/config.example.json
+++ b/configs/config.example.json
@@ -3,7 +3,10 @@
         "log_level": "info",
         "json": false
     },
-    "analyzer": {
+    "db": {
+        "dir": "/path/to/badger"
+    },
+    "router": {
         "record_ttl": "2h",
         "leak_rate": "10MB",
         "capacity": "4GB",
