feat(fsr): create FileSizeRatio analyzer

--- a/configs/nginx/nyaago_log.conf
+++ b/configs/nginx/nyaago_log.conf
@@ -3,7 +3,7 @@ log_format nyaago escape=json '{'
     '"client":"$remote_addr",'
     '"server":"$server_addr",'
     '"method":"$request_method",'
-    '"url":"$request_uri",'
+    '"url":"$uri",'
     '"status":$status,'
     '"sent":$body_bytes_sent,'
     '"duration":"$request_time",'
